# mkdocs-marimo

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pixi.toml  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  bump-lockfile.yml  ci.yml  docs.yml
docs/: index.md
docs/getting-started/: blocks.md  configuration.md  inline-notebook.md  inlined.py  installation.md  nav_notebook.py  quick-start.md
getting-started/blocks/: index.html
getting-started/configuration/: index.html
getting-started/inline-notebook/: index.html
getting-started/installation/: index.html
getting-started/nav_notebook/: index.html
getting-started/quick-start/: index.html
mkdocs_marimo/: blocks.py  plugin.py
search/: search_index.json
tests/: test_plugin.py
tests/fixtures/: app.py
