[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "marimo team", email = "myles@marimo.io"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "htmlmin>=0.1.12",
  "marimo>=0.8.15",
  "mkdocs>=1.5.2",
]
description = "MkDocs Marimo plugin"
dynamic = ["version"]
license = "MIT"
name = "mkdocs-marimo"
readme = "README.md"
requires-python = ">=3.9"

[project.entry-points."mkdocs.plugins"]
marimo = "mkdocs_marimo.plugin:MarimoPlugin"

[project.urls]
Documentation = "https://github.com/marimo-team/mkdocs-marimo#readme"
Homepage = "https://github.com/marimo-team/mkdocs-marimo"
Source = "https://github.com/marimo-team/mkdocs-marimo"
Tracker = "https://github.com/marimo-team/mkdocs-marimo/issues"

[tool.hatch.version]
path = "mkdocs_marimo/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/mkdocs_marimo",
  "/tests",
]
[tool.hatch.build.targets.wheel]
exclude = ["/tests"]

[tool.hatch.envs.default.scripts]
all = [
  "hatch run test:test",
  "hatch run style:check",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.envs.test.scripts]
test = [
  "pytest -xs",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]
type = ["default"]

[tool.hatch.envs.doc.scripts]
serve = [
  "mkdocs serve",
]

[tool.hatch.envs.style]
dependencies = [
  "black",
  "isort",
  "ruff",
]
detached = true

[tool.hatch.envs.style.scripts]
check = [
  "isort --check-only --diff mkdocs_marimo",
  "black -q --check --diff mkdocs_marimo",
  "ruff mkdocs_marimo",
]
format = [
  "isort -q mkdocs_marimo",
  "black -q mkdocs_marimo",
]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311"]

[tool.isort]
line_length = 100
profile = "black"

[tool.ruff]
ignore = ["E501"]
line-length = 100
